...

        OutlinedTextField(
            value = productName(),
            onValueChange = onProductNameChange,
            modifier = Modifier
                .weight(8f)
                .semantics { testTag = "ProductNameTextField" }
        )
    }
}


/**
...
            value = productDescription(),
            onValueChange = onProductDescriptionChange,
            modifier = Modifier
                .fillMaxWidth()
                .heightIn(124.dp)
                .padding(horizontal = 8.dp)
                .semantics { testTag = "ProductDescriptionTextField" }
        )
    }
}


/**
...
