...
    actionButtonContentDescription: () -> String? = { null },
    windowSizeClass: WindowSizeClass = currentWindowAdaptiveInfo().windowSizeClass
) {
    CenterAlignedTopAppBar(
        title = {
            // Handles TopAppBar's title content animation
            TopAppBarTitle(
                title = title
            )
        },
        navigationIcon = {
            /*
             Since both icons show at different [isPrincipalScreen] values, they will never overlap
...
